feat(address): OAuth2UserPrincipal 기반 주소지 API 리팩터링 및 테스트 개선
- AddressController, AddressService에서 기존 userId 기반 로직을 OAuth2UserPrincipal 기반으로 변경
- DroniUserRepository 의존성 제거 및 서비스 내부에서 principal로 사용자 조회 일원화
- AddressControllerTest, AddressServiceTest에서 userId 대신 OAuth2UserPrincipal을 활용하도록 테스트 코드 전체 리팩터링
- 관련 불필요한 코드 및 검증 로직 정리
- 사용자 인증 정보 기반 예외 처리 및 반환값 검증 일관성 강화

Refs: #45, #47